<resources>
    <string name="cpf">CPF</string>
    <string name="nome">Nome</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="adiciona_video_ao_abrir_o_app">Adiciona video ao abrir o app</string>
    <string name="remove_imagens_dos_trabalhos_feitos">Remove imagens dos trabalhos feitos</string>
    <string name="add_image_trab_agentes">Add image trab. agentes</string>
    <string name="exclui_agentes">Excluir agentes</string>
    <string name="configuracoes_cadastro_dos_administradores">Configurações cadastro dos administradores</string>
    <string name="btn_acompanhar_reclamacoes">Botão acompanhar reclamações</string>
    <string name="configuracoes_da_conta">Configurações da conta</string>
    <string name="add_video_ao_abrir_app">Add video ao abrir app</string>
    <string name="add_trabalhos_dos_agentes">Add trabalhos dos agentes</string>
    <string name="adicionar_agentes">Adicionar agentes</string>
    <string name="remove_agentes">Remove agentes</string>
    <string name="remove_trab_dos_agentes">Remove trab. dos agentes</string>
    <string name="btn_adicionar_agentes">Botão adicionar agentes</string>
    <string name="texto_responder">RESPONDER</string>
    <string name="informacoes_escorpiao"><b>Informações sobre escorpiões</b></string>
    <string name="fechar_video">Fechar vídeo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="selecione_estado">Selecione um estado</string>
    <string name="selecione_municipio">Selecione um município</string>
    <string name="agente_de_endemias">Agente de Endemias</string>
    <string name="agentes_dengue"><b>Agentes</b></string>
    <string name="administrador">Administrador</string>
    <string name="administradores">Administradores</string>
    <string name="administradores_extras">Administradores Extras</string>
    <string name="agentes_extras">Agentes Extras</string>
    <string name="seta_para_cima">seta para cima</string>
    <string name="enviar">ENVIAR</string>
    <string name="cuidados_sobre_escorpioes">Olá, Realizamos a vistoria no local informado e foram identificadas condições favoráveis ao aparecimento de escorpiões. As orientações necessárias foram repassadas, e foram adotadas medidas preventivas para reduzir o risco, como a eliminação de possíveis abrigos. Reforçamos a importância de manter o ambiente limpo, evitar o acúmulo de entulhos, vedar ralos e frestas, além de manter quintais e áreas externas organizadas. Caso haja novo aparecimento ou em situação de emergência, entre em contato com a Vigilância em Saúde do município. Atenciosamente,</string>
    <string name="cancelar">CANCELAR</string>
    <string name="enviar_notificacao">Enviar Notificação</string>
    <string name="titulo_da_notificacao">Título da Notificação</string>
    <string name="mensagem_corpo_do_texto">Mensagem (Corpo do texto)</string>
    <string name="aviso_esta_mensagem_sera_enviada_para_todos_os_usuarios">Aviso: Esta mensagem será enviada para todos os usuários que instalaram o app e que escolheram sua região.</string>
    <string name="cancelar_notificaco">CANCELAR NOTIFICAÇÃO</string>
    <string name="disparar_notificacao">DISPARAR NOTIFICAÇÃO</string>
    <string name="acompanhar_as_reclamacoes">Acompanhar as reclamações</string>
    <string name="plano_gratuito">PLANO GRATUITO</string>
    <string name="sem_trabalhos_para_excluir">Sem trabalhos para excluir</string>
    <string name="telefones_uteis_compras">• Telefones úteis</string>
    <string name="_2_administrador">• 2 Administradores</string>
    <string name="_6_agentes">• 6 Agentes</string>
    <string name="reclamacoes">• Reclamações</string>
    <string name="telefones_uteis">Telefones úteis</string>
    <string name="galeria_de_trabalhos">• Galeria de trabalhos</string>
    <string name="plano_individual">PLANO INDIVIDUAL</string>
    <string name="assinar">ASSINAR</string>
    <string name="plano_basico">PLANO BÁSICO</string>
    <string name="escolha_a_quantidade_ideal_de_administradores_e_agentes">• Escolha a quantidade ideal de administradores e agentes</string>
    <string name="plano_municipal">PLANO MUNICIPAL</string>
    <string name="_3_administradores">• 3 Administradores</string>
    <string name="_10_agentes">• 10 Agentes</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="local_de_entrega_dos_pneus">Onde entregar pneus usados</string>
    <string name="local_entrega_de_eletronico">Onde entregar eletrônicos usados</string>
    <string name="confirme_seu_e_mail">Confirme seu e-mail</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="eu_li_e_aceito_os_termos_de_uso">ACEITO OS TERMOS DE USO</string>
    <string name="ler_termos_de_uso">LER TERMOS DE USO</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="funcao">Função</string>
    <string name="descricao_icone_camera">Imagem camera toda preta para clicar e escolher uma imagem da pessoa</string>
    <string name="icone_video_para_selecionar_video">Icone video para selecionar video</string>
    <string name="icone_camera_para_selecionar_imagem">Icone camera para selecionar imagem</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="reclamacao">Reclamação</string>
    <string name="referencia">Referência</string>
    <string name="carregando_precos">Carregando preços...</string>
    <string name="escolher_localidade_title">Selecione sua localidade</string>
    <string name="continuar">Continuar</string>
    <string name="localizacao_automatica">📍 Localização detectada automaticamente</string>
    <string name="excluir_administradores">EXCLUIR ADMINISTRADORES</string>
    <string name="excluir_agentes">EXCLUIR AGENTES</string>
    <string name="excluir_pre_cadastro_administrador">EXCLUIR PRÉ CADASTRO ADMINISTRADOR</string>
    <string name="excluir_pre_cadastro_agentes">EXCLUIR PRÉ CADASTRO AGENTES</string>
    <string name="todo">TODO</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="endereco_completo">Avenida/Rua, número</string>
    <string name="secretaria">Secretaria</string>
    <string name="telefone_celular">Número telefone celular</string>
    <string name="numero_telefone_fixo">Número telefone fixo</string>
    <string name="horario_atendimento">Das 7:00 as 11:00 horas e das 13:00 as 17:00 horas</string>
    <string name="eletronicos">Eletrônicos</string>
    <string name="pneus">Pneus</string>
    <string name="salvar">SALVAR</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="palavra_ou">OU</string>
    <string name="concluir_pre_cadastro">Concluir Pré-Cadastro</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="icone_homem_e_mulher">Icone homem e mulher</string>
    <string name="login">LOGIN</string>
    <string name="adicionar_trabalhos_de_campo">Adicionar trabalhos de campo</string>
    <string name="sair">Sair</string>
    <string name="agente_de_combate_a_endemias">Agente de Combate a Endemias</string>
    <string name="adicionar_locais_dos_trabalhos_realizados">Adicionar locais dos trabalhos realizados</string>
    <string name="excluir_trabalhos_realizados">Excluir trabalhos realizados</string>
    <string name="configuracoes">Configurações</string>
    <string name="numero_da_casa">Número da casa</string>
    <string name="conjunto">Conjunto</string>
    <string name="sugestao">Sugestão</string>
    <string name="titulo_da_imagem">Titulo da imagem</string>
    <string name="botao_enviar_imagem">botao enviar imagem</string>
    <string name="nada_para_ver">Nenhum trabalho adicionado.\n Tente:\n 1- Ativar a internet. \n 2- Aguarde adicionar conteúdo.</string>
    <string name="sugestao_email">Você quis dizer: exemplo@gmail.com?</string>
    <string name="corrigir">Corrigir</string>
    <string name="contamos_com_voce">Contamos com Você!</string>
    <string name="excluir_conta">EXCLUIR CONTA</string>
    <string name="data_do_cadastro">Data do cadastro</string>
    <string-array name="opcoes_status_reclamacoes">
        <item>Todos</item>
        <item>Aguardando resposta</item>
        <item>Respondido</item>
        <item>Resolvido</item>
        <item>Não resolvido</item>
    </string-array>
    <string name="atualizado_em">Atualizado em:</string>
    <string name="resposta">Resposta:</string>
    <string name="entrar_na_conta_usuario">ENTRAR COMO USUÁRIO</string>
    <string name="entrar_na_conta_agente_endemias">ENTRAR COMO AGENTE DE ENDEMIAS</string>
    <string name="entrar_na_conta_admin">ENTRAR COMO ADMINISTRADOR</string>
    <string name="app_name">Juntos Contra Dengue</string>
    <string name="tentar_novamente">TENTAR NOVAMENTE</string>
    <string name="botao_voltar">Botão voltar</string>
    <string name="voltar">Voltar</string>
    <string name="logo_do_aplicativo">Logo do Aplicativo</string>
    <string name="sobre_o_aplicativo">Sobre o Aplicativo</string>
    <string name="todos_juntos_contra_a_dengue">Juntos contra a Dengue</string>
    <string name="vers_o_1_0_0">Versão x.x.x</string>
    <string name="desenvolvido_por_marcelo_rodrigues_da_silva">Desenvolvido por: Marcelo Rodrigues da Silva</string>
    <string name="casa_estrela_software">Casa Estrela Software</string>
    <string name="_2026_casa_estrela_software_todos_os_direitos_reservados">© 2026 Casa Estrela Software. Todos os direitos reservados.</string>
    <string name="solicitacao_de_contratacao">Solicitação de Contrato</string>
    <string name="municipio">Município</string>
    <string name="estado">Estado</string>
    <string name="responsavel">Responsável</string>
    <string name="cargo">Cargo</string>
    <string name="plano_desejado">Plano Desejado</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor_mensal_estimado">Valor Mensal Estimado</string>
    <string name="observacoes">Observações</string>
    <string name="enviar_solicitacao">ENVIAR SOLICITAÇÃO</string>
    <string name="excluir_pre_cadastro">Excluir Pré Cadastro</string>
    <string name="comunicacao">Comunicação</string>
    <string name="data_do_pre_cadastro">Data do pre cadastro</string>
    <string name="horario_de_funcionamento">Horário de funcionamento</string>
    <string name="nome_agente">Nome agente</string>
    <string name="local">Local:</string>
    <string name="minha_conta">Minha conta</string>
    <string name="minhas_denuncias">Minhas Denúncias</string>
    <string name="descarte_de_pneus">Descarte de Pneus</string>
    <string name="descarte_de_eletronicos">Descarte de Eletrônicos</string>
    <string name="termos_de_uso_e_privacidade">Termos de Uso e Privacidade</string>
    <string name="adicionar_sliders">Adicionar sliders</string>
    <string name="adicionar_telefones">Adicionar telefones</string>
    <string name="excluir_telefones_uteis">Excluir telefones úteis</string>
    <string name="adicionar_locais_de_descartes">Adicionar locais de descartes</string>
    <string name="compartilhar_app">Compartilhar App</string>
    <string name="compras">Compras</string>
    <string name="excluir_locais_de_descarte_de_eletronicos">Excluir locais de descarte de eletronicos</string>
    <string name="excluir_locais_de_descarte_de_pneus">Excluir locais de descarte de pneus</string>
    <string name="valor_estimado">Valor estimado</string>
    <string name="recuperar_e_mail">Recuperar E-mail</string>
    <string name="digite_seu_cpf_apenas_numeros">Digite seu CPF (apenas números)</string>
    <string name="buscar_email">Buscar Email</string>
</resources>